examples/test/testpolicy320.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy320
  namespace: namespace101
spec:
  podSelector:
    matchLabels:
      key46: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value46
          key46: value5
          key15: value7
      podSelector:
        matchLabels:
          key8: value34
          key2: value29
          key23: value42
